Fix trigger for builder-update-csit-tests job
Change-Id: I7e87c37224d904a1bc85f0f2b493acbbc7bac377
Signed-off-by: Marcus G K Williams <marcus.williams@intel.com>

--- a/jjb/releng-jobs.yaml
+++ b/jjb/releng-jobs.yaml
@@ -456,7 +456,7 @@
 
     triggers:
         - reverse:
-               jobs: 'build-merge'
+               jobs: 'builder-merge'
 
     builders:
         - shell: |
