builder-update-csit-tests downloads changes
Currently builder-update-csit-tests job
creates a new branch and auto-updates
changes to csit tests to run. However
if a change exists, it will still
push a new patch to gerrit even
if no change exists. This patch
will download existing change
and update, or create a new
branch if no change exits to keep
from duplicating changes and spamming
inboxes.

Change-Id: Ie3f08784ce6b75fe161932859d0a27e14add041c
Signed-off-by: Marcus G K Williams <marcus.williams@intel.com>

--- a/jjb/releng-jobs.yaml
+++ b/jjb/releng-jobs.yaml
@@ -460,7 +460,7 @@
 
     builders:
         - shell: |
-            git checkout -b auto-update-csit-jobs
+            git review -d auto-update-csit-jobs
         - integration-list-jobs:
             blacklist: '{csit-list-blacklist}'
             search_string: "csit"
