make upstream jobs run daily
Change-Id: I4518f3ff559e7df857ff5a163acb4d498866f3dc
Signed-off-by: Jamo Luhrsen <jluhrsen@redhat.com>

--- a/jjb/netvirt/netvirt-csit-multi-openstack.yaml
+++ b/jjb/netvirt/netvirt-csit-multi-openstack.yaml
@@ -24,10 +24,10 @@
             schedule: 'H H/4 * * *'
             sg-mode: 'transparent'
         - upstream-stateful:
-            schedule: ''
+            schedule: 'H H * * *'
             sg-mode: 'stateful'
         - upstream-learn:
-            schedule: ''
+            schedule: 'H H * * *'
             sg-mode: 'learn'
         - gate-learn:
             schedule: ''
