Fix csit list variable expression
Change-Id: I9d173b06d06f2e8a523ac789a8139348c21eed9b
Signed-off-by: Luis Gomez <ecelgp@gmail.com>

--- a/jjb/integration/integration-test-jobs.yaml
+++ b/jjb/integration/integration-test-jobs.yaml
@@ -16,21 +16,21 @@
             branch: 'master'
             jdk: 'openjdk8'
             jre: 'openjdk8'
-            csit-list: {csit-list-carbon}
+            csit-list: '{csit-list-carbon}'
             schedule: 'H H * * 0-4'
 
         - boron:
             branch: 'stable/boron'
             jdk: 'openjdk8'
             jre: 'openjdk8'
-            csit-list: {csit-list-boron}
+            csit-list: '{csit-list-boron}'
             schedule: 'H H * * 0-4'
 
         - beryllium:
             branch: 'stable/beryllium'
             jdk: 'openjdk7'
             jre: 'openjdk7'
-            csit-list: {csit-list-beryllium}
+            csit-list: '{csit-list-beryllium}'
             schedule: 'H H * * 6'
 
     # tools system image
