Fix publisher definition in the incorrect spot
Patch Id05a75f86788ddfd62098d013e841eec40d439a4 was incorrect and this
patch fixes that.

Change-Id: I7d0ca4101373100d94400205197dbbeb55a416f9
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/autorelease/autorelease-templates.yaml
+++ b/jjb/autorelease/autorelease-templates.yaml
@@ -93,6 +93,8 @@
             cp *.log *.prop $_
 
     publishers:
+        - archive:
+            artifacts: 'dependecies.log'
         - email-notification:
             email-recipients: '{email-recipients}'
             email-prefix: '[autorelease]'
