Remove integration- from distribution jobs
The main motivation is that distribution-verify-{stream}
was trying to trigger integration-distribution-deploy-{stream}
which was already renamed.
This also updates comments, renames the yaml file, but leaves
integration-distribution-test-{stream} as that is more int/test than int/dist.

Change-Id: Ie3a2bb40dd8d07c6b4f47dd91e82a26328fb5851
Signed-off-by: Vratko Polak <vrpolak@cisco.com>

--- a/jjb/integration/integration-macros.yaml
+++ b/jjb/integration/integration-macros.yaml
@@ -252,7 +252,7 @@
 
 # Macro: integration-deploy-controller-verify
 # Operation: this macro deploys the controller with all fetures
-# Used by: integration-distribution-deploy-{stream} job template
+# Used by: distribution-deploy-{stream} job template
 
 - builder:
     name: integration-deploy-controller-verify
@@ -318,7 +318,7 @@
 
 # Macro: integration-get-bundle-url-root
 # Operation: this macro gets the job generated distribution URL from root pom.xml
-# Used by: integration-distribution-verify-{stream} job template
+# Used by: distribution-verify-{stream} job template
 
 - builder:
     name: integration-get-bundle-url-root
