--- a/jjb/integration/distribution-jobs.yaml
+++ b/jjb/integration/distribution-jobs.yaml
@@ -1,6 +1,6 @@
 
 - project:
-    name: integration-distribution
+    name: distribution-jobs
     jobs:
         - '{project-name}-verify-python-{stream}'
         - 'distribution-verify-{stream}'
@@ -9,7 +9,7 @@
         - 'distribution-offline-{stream}'
 
     project: integration/distribution
-    project-name: integration-distribution
+    project-name: distribution
 
     stream:
         - carbon:
@@ -83,7 +83,7 @@
 
     postbuilders:
         - trigger-builds:
-            - project: 'integration-distribution-deploy-{stream}'
+            - project: 'distribution-deploy-{stream}'
               block: true
               predefined-parameters:
                   BUNDLEURL=$BUNDLEURL
@@ -206,7 +206,7 @@
             email-recipients: '{email-recipients}'
             email-prefix: '[int/dist]'
 
-# Template: integration-distribution-deploy-{stream}
+# Template: distribution-deploy-{stream}
 # Goal: Verify distribution starts with no issues when all features are loaded
 # Operation: This job deploys the controller installing odl-integration-all
 
@@ -255,7 +255,7 @@
         - opendaylight-infra-shiplogs:
             maven-version: 'mvn33'
 
-# Template: integration-distribution-offline-{stream}
+# Template: distribution-offline-{stream}
 # Goal: Verify distribution can start with no internet connection
 # Operation: This job deploys the controller removing any external repository definition
 
