testing yaml file
 - for clustering/vpp csit in gbp

Change-Id: If3bbc78acde67c8ed6001b69bb537a4ff1863c57
Signed-off-by: Matej Perina <mperina@cisco.com>

--- a/jjb/groupbasedpolicy/groupbasedpolicy-csit-clustering.yaml
+++ b/jjb/groupbasedpolicy/groupbasedpolicy-csit-clustering.yaml
@@ -28,8 +28,12 @@
         - all:
             scope: 'all'
 
+    #JCloud VMs for VPP deployment
+    mininet-image: 'CentOS 7 - docker - 20170120-1434'
+    mininet-vms: 3
+
     # Features to install
-    install-features: 'odl-groupbasedpolicy-ofoverlay,odl-groupbasedpolicy-ui,odl-restconf-all'
+    install-features: 'odl-groupbasedpolicy-neutron-vpp-mapper,odl-vbd,odl-restconf'
 
     # Robot custom options
     robot-options: ''
