Remove bgpcep-verify-python-carbon
Pcepy (the Python part of Bgpcep) is already removed from Carbon.

Change-Id: Iab5e3d91f5c309a96ca7beacd4fad5c4feb4dfed
Signed-off-by: Vratko Polak <vrpolak@cisco.com>

--- a/jjb/bgpcep/bgpcep-pcepy.yaml
+++ b/jjb/bgpcep/bgpcep-pcepy.yaml
@@ -4,8 +4,7 @@
         - '{project-name}-verify-python-{stream}'
 
     stream:
-        - carbon:
-            branch: 'master'
+        # Pcepy was removed in Carbon.
         - boron:
             branch: 'stable/boron'
         - beryllium:
