--- a/jjb/autorelease/autorelease-templates.yaml
+++ b/jjb/autorelease/autorelease-templates.yaml
@@ -94,6 +94,9 @@
 
     publishers:
         - archive:
+            # Need to archive dependencies.log in Jenkins to provide a simple
+            # way for downstream jobs to pull the latest version of this file
+            # in their builds.
             artifacts: 'dependecies.log'
         - email-notification:
             email-recipients: '{email-recipients}'
