Add a comment to explain dependencies.log archiving
Change-Id: I08b34485542b5d661a7b6e1df61665a58e775c95
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/autorelease/autorelease-templates.yaml
+++ b/jjb/autorelease/autorelease-templates.yaml
@@ -94,6 +94,9 @@
 
     publishers:
         - archive:
+            # Need to archive dependencies.log in Jenkins to provide a simple
+            # way for downstream jobs to pull the latest version of this file
+            # in their builds.
             artifacts: 'dependencies.log'
         - email-notification:
             email-recipients: '{email-recipients}'
