Fix typo in dependecies.log
Change-Id: I88c3e8c6e7ae911d8510974389767aeffd1a6bd0
Signed-off-by: Jamo Luhrsen <jluhrsen@redhat.com>

--- a/jjb/autorelease/autorelease-templates.yaml
+++ b/jjb/autorelease/autorelease-templates.yaml
@@ -94,7 +94,7 @@
 
     publishers:
         - archive:
-            artifacts: 'dependecies.log'
+            artifacts: 'dependencies.log'
         - email-notification:
             email-recipients: '{email-recipients}'
             email-prefix: '[autorelease]'
