Improve Heat implementation error handling
* Wait and query status in 1 minute loops when stack create
  status is CREATE_IN_PROGRESS with a timeout to 15 minutes
* Continue with the job once stack create returns CREATE_COMPLETE
* Notify publisher not delete stack when CREATE_IN_PROGRESS

Change-Id: Ifdc927f601c07e519cdc502a2fb56fca138c659e
Signed-off-by: Anil Belur <abelur@linuxfoundation.org>

--- a/jjb/releng-macros.yaml
+++ b/jjb/releng-macros.yaml
@@ -283,7 +283,10 @@
                 - shell: |
                     if [ -d "$WORKSPACE/.venv-openstack" ]; then
                         source $WORKSPACE/.venv-openstack/bin/activate
-                        openstack --os-cloud rackspace stack delete --yes $STACK_NAME
+                        source "$WORKSPACE/openstack_env.sh"
+                        if [ "$OS_STATUS" != "CREATE_IN_PROGRESS" ]; then
+                            openstack --os-cloud rackspace stack delete --yes $STACK_NAME
+                        fi
                     fi
                 - shell: !include-raw: include-raw-deploy-archives.sh
                 - maven-target:
