--- a/jjb/netvirt/netvirt-vpnservices-csit-hwvtep-openstack.yaml
+++ b/jjb/netvirt/netvirt-vpnservices-csit-hwvtep-openstack.yaml
@@ -74,6 +74,8 @@
 
     tools_system_count: 2
 
+    tools_system_image: Ubuntu 14.04 - mininet-ovs-25 - 20170130-0414
+
     odl-enable-l3: 'yes'
 
     public-bridge: 'br-physnet1'
