--- a/jjb/netvirt/netvirt-vpnservices-csit-hwvtep-openstack.yaml
+++ b/jjb/netvirt/netvirt-vpnservices-csit-hwvtep-openstack.yaml
@@ -78,11 +78,15 @@
 
     odl-enable-l3: 'yes'
 
+    enable-networking-l2gw: 'yes'
+
+    enable-networking-bgpvpn: 'yes'
+
     public-bridge: 'br-physnet1'
 
-    enable-openstack-services: 'q-svc,q-dhcp,q-meta,n-cauth,tempest'
+    enable-openstack-services: 'q-svc,q-dhcp,q-meta,n-cauth,tempest,l2gw-plugin'
 
-    disable-openstack-services: 'swift,cinder,n-net,q-vpn,n-cpu'
+    disable-openstack-services: 'swift,cinder,n-net,q-vpn'
 
     tenant-network-type: 'vxlan'
 
