Make orphaned stacks cleanup script run every 30 minutes
Change-Id: I2df11c1a622b09991b08d346001cee68e578dba6
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/releng-jobs.yaml
+++ b/jjb/releng-jobs.yaml
@@ -309,8 +309,8 @@
             build-timeout: '{build-timeout}'
 
     triggers:
-        # Attempt to clear up stacks every hour in case we have orphaned stacks
-        - timed: '0 * * * *'
+        # Attempt to clear up stacks every 30 mins in case we have orphaned stacks
+        - timed: '0,30 * * * *'
 
     builders:
         - shell: !include-raw-escape: opendaylight-infra-cleanup-stale-stacks.sh
