Add log server url to emails
When sending emails about build failures we should be providing the log
server url rather than the jenkins build url.

Trello: https://trello.com/c/xAA51pNj
Change-Id: Ie566607e5b8f76f32bd9ebaa2c1f909a3b2c4369
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/releng-macros.yaml
+++ b/jjb/releng-macros.yaml
@@ -243,7 +243,14 @@
             body: |
                 $PROJECT_NAME - Build # $BUILD_NUMBER - $BUILD_STATUS:
 
-                Check console output at $BUILD_URL to view the results.
+                Please refer to the logs server URL for console logs when possible
+                and use the Jenkins Build URL as a last resort.
+
+                Console Logs URL:
+                https://logs.opendaylight.org/$SILO/$JENKINS_HOSTNAME/$JOB_NAME/$BUILD_NUMBER
+
+                Jenkins Build URL:
+                $BUILD_URL
             unstable: true
             fixed: true
             send-to:
