--- a/jjb/packaging/packaging.yaml
+++ b/jjb/packaging/packaging.yaml
@@ -9,6 +9,8 @@
         - 'packaging-build-deb-{stream}'
         - 'packaging-test-rpm-{stream}'
         - 'packaging-test-puppet-{stream}'
+        - 'packaging-test-ansible-rpm-{stream}'
+        - 'packaging-test-ansible-deb-{stream}'
 
     project: 'integration/packaging'
 
@@ -199,6 +201,41 @@
          artifacts: '**'
 
 - job-template:
+    name: 'packaging-test-ansible-rpm-{stream}'
+
+    node: dynamic_verify
+
+    project-type: freestyle
+
+    properties:
+        - opendaylight-infra-properties:
+            build-days-to-keep: 7
+
+    parameters:
+        - opendaylight-infra-parameters:
+            project: '{project}'
+            branch: '{branch}'
+            refspec: 'refs/heads/{branch}'
+            artifacts: '{archive-artifacts}'
+
+    scm:
+        - integration-gerrit-scm:
+            basedir: 'packaging'
+            refspec: '$GERRIT_REFSPEC'
+            branch: 'master'
+
+    wrappers:
+        - opendaylight-infra-wrappers:
+            build-timeout: '{build-timeout}'
+
+    builders:
+        - shell: !include-raw: include-raw-test-ansible-rpm.sh
+
+    triggers:
+        - timed: '@daily'
+
+
+- job-template:
     name: 'packaging-build-deb-{stream}'
 
     node: ubuntu_mininet
@@ -280,3 +317,37 @@
     publishers:
     - archive-artifacts:
         artifacts: 'packaging/deb/opendaylight/*.deb'
+
+- job-template:
+    name: 'packaging-test-ansible-deb-{stream}'
+
+    node: ubuntu-trusty-mininet-2c-2g
+
+    project-type: freestyle
+
+    properties:
+        - opendaylight-infra-properties:
+            build-days-to-keep: 7
+
+    parameters:
+        - opendaylight-infra-parameters:
+            project: '{project}'
+            branch: '{branch}'
+            refspec: 'refs/heads/{branch}'
+            artifacts: '{archive-artifacts}'
+
+    scm:
+        - integration-gerrit-scm:
+            basedir: 'packaging'
+            refspec: '$GERRIT_REFSPEC'
+            branch: 'master'
+
+    wrappers:
+        - opendaylight-infra-wrappers:
+            build-timeout: '{build-timeout}'
+
+    builders:
+        - shell: !include-raw: include-raw-test-ansible-deb.sh
+
+    triggers:
+        - timed: '@daily'
