Archive hs_err_*.log files
If the JVM runs out of host memory, or otherwise fails,
it will leave a hs_err_pidXXXX.log file. Archive these
for analysis.

Change-Id: Ic3929afaacd607588a54d4daa3d136beaaa3fee4
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/jjb/releng-macros.yaml
+++ b/jjb/releng-macros.yaml
@@ -15,7 +15,7 @@
             description: 'Parameter to identify an ODL Gerrit project'
         - string:
             name: ARCHIVE_ARTIFACTS
-            default: '{artifacts} **/target/surefire-reports/*-output.txt'
+            default: '{artifacts} **/target/surefire-reports/*-output.txt **/hs_err_*.log'
             description: 'Space separated glob patterns for artifacts to archive into logs.opendaylight.org'
         - string:
             name: GERRIT_PROJECT
