Make controller jobs use 16GB nodes
This is temporary workaround to attempt to get progress
on merge jobs, which are currently running out of OS RAM.

Change-Id: I81c371324b67e7b33f16cbc32ac88715be1c899f
Signed-off-by: Robert Varga <rovarga@cisco.com>

--- a/jjb/controller/controller.yaml
+++ b/jjb/controller/controller.yaml
@@ -24,6 +24,8 @@
     dependencies: 'odlparent-merge-{stream},yangtools-merge-{stream},aaa-merge-{stream}'
     email-upstream: '[controller] [odlparent] [yangtools] [aaa]'
     archive-artifacts: ''
+    # Temporary workaround for SFT failure with karaf4-features
+    build-node: centos7-java-builder-4c-8g
 
 - project:
     name: controller-boron
