Add geius to netvirt integration dependencies
Change-Id: I0ff7fb8cb876e1b4f46e0af6c4ec26140bb1244f
Signed-off-by: Sam Hague <shague@redhat.com>

--- a/jjb/netvirt/netvirt.yaml
+++ b/jjb/netvirt/netvirt.yaml
@@ -21,8 +21,8 @@
     mvn-settings: 'netvirt-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx2048m -XX:MaxPermSize=512m'
-    dependencies: 'neutron-merge-{stream},openflowjava-merge-{stream},openflowplugin-merge-{stream},ovsdb-merge-{stream},sfc-merge-{stream}'
-    email-upstream: '[netvirt] [neutron] [openflowjava] [openflowplugin] [ovsdb] [sfc]'
+    dependencies: 'genius-merge-{stream},neutron-merge-{stream},openflowjava-merge-{stream},openflowplugin-merge-{stream},ovsdb-merge-{stream},sfc-merge-{stream}'
+    email-upstream: '[genius] [netvirt] [neutron] [openflowjava] [openflowplugin] [ovsdb] [sfc]'
     archive-artifacts: ''
 
 - project:
@@ -48,8 +48,8 @@
     mvn-settings: 'netvirt-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx2048m -XX:MaxPermSize=512m'
-    dependencies: 'neutron-merge-{stream},openflowjava-merge-{stream},openflowplugin-merge-{stream},ovsdb-merge-{stream},sfc-merge-{stream}'
-    email-upstream: '[netvirt] [neutron] [openflowjava] [openflowplugin] [ovsdb] [sfc]'
+    dependencies: 'genius-merge-{stream},neutron-merge-{stream},openflowjava-merge-{stream},openflowplugin-merge-{stream},ovsdb-merge-{stream},sfc-merge-{stream}'
+    email-upstream: '[genius] [netvirt] [neutron] [openflowjava] [openflowplugin] [ovsdb] [sfc]'
     archive-artifacts: ''
 
 - project:
@@ -103,6 +103,6 @@
     mvn-settings: 'netvirt-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx2048m -XX:MaxPermSize=512m'
-    dependencies: 'neutron-merge-{stream},openflowjava-merge-{stream},openflowplugin-merge-{stream},ovsdb-merge-{stream},sfc-merge-{stream}'
-    email-upstream: '[netvirt] [neutron] [openflowjava] [openflowplugin] [ovsdb] [sfc]'
+    dependencies: 'genius-merge-{stream},neutron-merge-{stream},openflowjava-merge-{stream},openflowplugin-merge-{stream},ovsdb-merge-{stream},sfc-merge-{stream}'
+    email-upstream: '[genius] [netvirt] [neutron] [openflowjava] [openflowplugin] [ovsdb] [sfc]'
     archive-artifacts: ''
