--- a/jjb/integration/integration-test-jobs.yaml
+++ b/jjb/integration/integration-test-jobs.yaml
@@ -142,7 +142,7 @@
     name: 'integration-distribution-test-{stream}'
 
     project-type: freestyle
-    node: centos7-java-builder-2c-8g
+    node: centos7-robot-2c-2g
 
     properties:
         - opendaylight-infra-properties:
