Depricate dynamic_verify from existing jobs
* dynamic_verify is replaced with centos7-java-builder-2c-4g

Change-Id: I6bbce618d691a2d184990d3bf85cf3b67bd45770
Signed-off-by: Anil Belur <abelur@linuxfoundation.org>

--- a/jjb/packaging/packaging.yaml
+++ b/jjb/packaging/packaging.yaml
@@ -53,7 +53,7 @@
 - job-template:
     name: 'packaging-build-rpm-{stream}'
 
-    node: dynamic_verify
+    node: centos7-java-builder-2c-4g
 
     project-type: freestyle
 
@@ -108,7 +108,7 @@
 - job-template:
     name: 'packaging-build-rpm-snap-{stream}'
 
-    node: dynamic_verify
+    node: centos7-java-builder-2c-4g
 
     project-type: freestyle
 
@@ -163,7 +163,7 @@
 - job-template:
     name: 'packaging-test-rpm-{stream}'
 
-    node: dynamic_verify
+    node: centos7-java-builder-2c-4g
 
     parameters:
         - opendaylight-infra-parameters:
