--- a/jjb/spectrometer/spectrometer-jobs.yaml
+++ b/jjb/spectrometer/spectrometer-jobs.yaml
@@ -22,7 +22,7 @@
     name: 'spectrometer-deploy-webapp-master'
 
     project-type: freestyle
-    node: dynamic_verify
+    node: centos7-java-builder-2c-4g
     concurrent: false
 
     properties:
