Update include_path to only include cwd
We only care to include paths from the current working directory based
on our current usage of JJB so update the example to remove paths we
don't care about.

Change-Id: I54047753cbf9f6812751a395692773c3f616dad2
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jenkins.ini.example
+++ b/jenkins.ini.example
@@ -1,7 +1,7 @@
 [job_builder]
 ignore_cache=True
 keep_descriptions=False
-include_path=.:scripts:~/git/
+include_path=.
 recursive=True
 
 [jenkins]
