--- a/jjb/integration/integration-templates.yaml
+++ b/jjb/integration/integration-templates.yaml
@@ -1020,6 +1020,22 @@
             name: SECURITY_GROUP_MODE
             default: '{security-group-mode}'
             description: 'Security Group Mode to be used in netvirt aclservice config'
+        - string:
+            name: PUBLIC_PHYSICAL_NETWORK
+            default: '{public-physical-network}'
+            description: 'provider physical network used for flat/vlan networks'
+        - string:
+            name: ENABLE_NETWORKING_L2GW
+            default: '{enable-networking-l2gw}'
+            description: 'Enable networking L2gw'
+        - string:
+            name: NETWORKING_L2GW_DRIVER
+            default: '{networking-l2gw-repo}'
+            description: 'URL to fetch networking-l2gw driver'
+        - string:
+            name: DISABLE_ODL_L3_PLUGIN
+            default: '{disable-odl-l3-service-plugin}'
+            description: 'Disable odl l3 service plugin'
     scm:
         - integration-gerrit-scm:
             basedir: 'test'
@@ -1146,6 +1162,10 @@
             name: SECURITY_GROUP_MODE
             default: '{security-group-mode}'
             description: 'Security Group Mode to be used in netvirt aclservice config'
+        - string:
+            name: PUBLIC_PHYSICAL_NETWORK
+            default: '{public-physical-network}'
+            description: 'provider physical network used for flat/vlan networks'
     scm:
         - integration-gerrit-scm:
             basedir: 'test'
