--- a/jjb/releng-defaults.yaml
+++ b/jjb/releng-defaults.yaml
@@ -11,6 +11,8 @@
 
     email-recipients: 'jenkins@lists.opendaylight.org'
     odl-ml2-driver-repo: 'https://github.com/openstack/networking-odl'
+    networking-l2gw-repo: 'http://git.openstack.org/openstack/networking-l2gw'
+    disable-odl-l3-service-plugin: 'no'
     server-name: 'OpenDaylight'
     git-url: 'ssh://jenkins-$SILO@git.opendaylight.org:29418'
 
@@ -34,7 +36,7 @@
     openstack_system_image: CentOS 7 - devstack - 20170120-1710
     tools_system_count: 1
     tools_system_flavor: 2 GB General Purpose v1
-    tools_system_image: Ubuntu 14.04 - mininet - 20170207-2055
+    tools_system_image: Ubuntu 14.04 - mininet - 20170210-0439
 
     # Default Robot framework options
     robot-options: ''
