Enhanced Hwvtep template to supply provision to enable l2gw services for integration project
Change-Id: I71ca8d298b1b181ff7a1621587bd9168a318ecf3
Signed-off-by: abbas <abbas.pareedkunju@tcs.com>

--- a/jjb/integration/integration-templates.yaml
+++ b/jjb/integration/integration-templates.yaml
@@ -1020,6 +1020,18 @@
             name: SECURITY_GROUP_MODE
             default: '{security-group-mode}'
             description: 'Security Group Mode to be used in netvirt aclservice config'
+        - string:
+            name: ENABLE_NETWORKING_L2GW
+            default: '{enable-networking-l2gw}'
+            description: 'Enable networking L2gw'
+        - string:
+            name: NETWORKING_L2GW_DRIVER
+            default: '{networking-l2gw-repo}'
+            description: 'URL to fetch networking-l2gw driver'
+        - string:
+            name: DISABLE_ODL_L3_PLUGIN
+            default: '{disable-odl-l3-service-plugin}'
+            description: 'Disable odl l3 service plugin'
     scm:
         - integration-gerrit-scm:
             basedir: 'test'
