--- a/jjb/netvirt/netvirt-vpnservices-csit-hwvtep-openstack.yaml
+++ b/jjb/netvirt/netvirt-vpnservices-csit-hwvtep-openstack.yaml
@@ -78,9 +78,13 @@
 
     odl-enable-l3: 'yes'
 
+    enable-networking-l2gw: 'yes'
+
+    disable-odl-l3-service-plugin: 'yes'
+
     public-bridge: 'br-physnet1'
 
-    enable-openstack-services: 'q-svc,q-dhcp,q-meta,n-cauth,tempest'
+    enable-openstack-services: 'q-svc,q-dhcp,q-meta,n-cauth,tempest,l2gw_plugin'
 
     disable-openstack-services: 'swift,cinder,n-net,q-vpn,n-cpu'
 
