--- a/jjb/releng-defaults.yaml
+++ b/jjb/releng-defaults.yaml
@@ -11,6 +11,8 @@
 
     email-recipients: 'jenkins@lists.opendaylight.org'
     odl-ml2-driver-repo: 'https://github.com/openstack/networking-odl'
+    networking-l2gw-repo: 'http://git.openstack.org/openstack/networking-l2gw'
+    disable-odl-l3-service-plugin: 'no'
     server-name: 'OpenDaylight'
     git-url: 'ssh://jenkins-$SILO@git.opendaylight.org:29418'
 
