--- a/jjb/releng-defaults.yaml
+++ b/jjb/releng-defaults.yaml
@@ -34,7 +34,7 @@
     openstack_system_image: CentOS 7 - devstack - 20170120-1710
     tools_system_count: 1
     tools_system_flavor: 2 GB General Purpose v1
-    tools_system_image: Ubuntu 14.04 - mininet-ovs-25 - 20170130-0414
+    tools_system_image: Ubuntu 14.04 - mininet - 20170130-0425
 
     # Default Robot framework options
     robot-options: ''
