--- a/jjb/vtn/vtn-csit-manager.yaml
+++ b/jjb/vtn/vtn-csit-manager.yaml
@@ -21,7 +21,7 @@
         - beryllium:
             branch: 'stable/beryllium'
             jre: 'openjdk7'
-            # TODO: Is less than 2.5 needed here?
+            tools_system_image: Ubuntu 14.04 - mininet - 20170130-0425
 
     install:
         - only:
