--- a/jjb/autorelease/autorelease-templates.yaml
+++ b/jjb/autorelease/autorelease-templates.yaml
@@ -103,6 +103,11 @@
               condition: UNSTABLE_OR_BETTER
               property-file: variables.jenkins-trigger
               fail-on-missing: true
+            - project: 'packaging-build-rpm-master'
+              condition: UNSTABLE_OR_BETTER
+              predefined-parameters: DOWNLOAD_URL=$BUNDLEURL
+              property-file: variables.jenkins-trigger
+              fail-on-missing: true
         - opendaylight-infra-shiplogs:
             maven-version: 'mvn33'
 
